--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,9 +4,9 @@
 
 :root {
   --background: #ffffff;
-  --secondBackground: #f1dfdf;
-  --shadowColor: #d3b8b8;
-  --hoverColor: #977a7a;
+  --secondBackground: #b58978;
+  --shadowColor: #7b3a25;
+  --hoverColor: #70492c;
   --font: Elephant;
 }
 @font-face {
